// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFnBlockedContent() retrieves metadata about a particular set of describe functions 1`] = `
Object {
  "describe": Array [
    Object {
      "code": "// some code 1
/* eslint-disable-next-line */
describe.only('Nested describe 1', () => {
    // some setup
    // some more setup

    it('does this and that', () => {
        // code of what it does
        expect(true).toBeTruthy()
    })
})",
      "describe": Array [
        Object {
          "code": "// some setup
// some more setup

it('does this and that', () => {
    // code of what it does
    expect(true).toBeTruthy()
})",
          "describe": Array [],
          "end": 10,
          "flag": "only",
          "it": Array [
            Object {
              "code": "// code of what it does
expect(true).toBeTruthy()",
              "describe": Array [],
              "end": 6,
              "flag": undefined,
              "it": Array [],
              "start": 3,
              "title": "does this and that",
            },
          ],
          "start": 2,
          "title": "Nested describe 1",
        },
      ],
      "end": 12,
      "flag": undefined,
      "it": Array [],
      "start": 0,
      "title": "Some describe title 1",
    },
    Object {
      "code": "// some code 2",
      "describe": Array [],
      "end": 16,
      "flag": undefined,
      "it": Array [],
      "start": 14,
      "title": "Some describe title 2",
    },
    Object {
      "code": "// some code 3",
      "describe": Array [],
      "end": 20,
      "flag": undefined,
      "it": Array [],
      "start": 18,
      "title": "Some describe title 3",
    },
  ],
  "it": Array [],
}
`;

exports[`parse() retrieves metadata about a jest source 1`] = `
Object {
  "describe": Array [
    Object {
      "code": "// some code 1
/* eslint-disable-next-line */
describe.only('Nested describe 1', () => {
    // some setup
    // some more setup

    it('does this and that', () => {
        // code of what it does
        expect(true).toBeTruthy()
    })
})",
      "describe": Array [
        Object {
          "code": "// some setup
// some more setup

it('does this and that', () => {
    // code of what it does
    expect(true).toBeTruthy()
})",
          "describe": Array [],
          "end": 10,
          "flag": "only",
          "it": Array [
            Object {
              "code": "// code of what it does
expect(true).toBeTruthy()",
              "describe": Array [],
              "end": 6,
              "flag": undefined,
              "it": Array [],
              "start": 3,
              "test": Array [],
              "title": "does this and that",
            },
          ],
          "start": 2,
          "test": Array [],
          "title": "Nested describe 1",
        },
      ],
      "end": 12,
      "flag": undefined,
      "it": Array [],
      "start": 0,
      "test": Array [],
      "title": "Some describe title 1",
    },
    Object {
      "code": "// some code 2",
      "describe": Array [],
      "end": 16,
      "flag": undefined,
      "it": Array [],
      "start": 14,
      "test": Array [],
      "title": "Some describe title 2",
    },
    Object {
      "code": "// some code 3",
      "describe": Array [],
      "end": 20,
      "flag": undefined,
      "it": Array [],
      "start": 18,
      "test": Array [],
      "title": "Some describe title 3",
    },
  ],
  "it": Array [],
  "test": Array [],
  "title": "Some jest file",
}
`;
